# ltui

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ltui.py  pyproject.toml  sctui.py
.github/: FUNDING.yml
.github/scripts/: star_chart.py
.github/workflows/: release.yml  star-chart.yml
jtui/: README.md  jtui.py  pyproject.toml
jtui/assets/: README.md
jtui/tools/: screenshots.py
ltui/: README.md  ltui.py  pyproject.toml
ltui/assets/: README.md
ltui/tools/: screenshots.py
packaging/aur/: .SRCINFO  PKGBUILD
sctui/: README.md  pyproject.toml  sctui.py
sctui/.github/workflows/: release.yml
sctui/assets/: README.md
tools/: screenshots.py
