[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ltui-linear"
version = "0.4.2"
description = "A fast, beautiful TUI for Linear — grouped by status, instant startup, full keyboard + mouse control"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Gheat" }]
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0",
    "httpx>=0.27",
]
keywords = ["linear", "tui", "terminal", "textual", "issue-tracker", "productivity"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals",
    "Topic :: Software Development :: Bug Tracking",
]

[project.urls]
Homepage = "https://github.com/Gheat1/ltui"
Repository = "https://github.com/Gheat1/ltui"
Issues = "https://github.com/Gheat1/ltui/issues"

[project.scripts]
ltui = "ltui:main"

[tool.setuptools]
py-modules = ["ltui"]
