[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sctui"
version = "0.2.0"
description = "A fast, beautiful TUI for Shortcut — status-grouped stories, instant startup, full keyboard + mouse control"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Gheat" }]
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0",
    "httpx>=0.27",
]
keywords = ["shortcut", "clubhouse", "tui", "terminal", "textual", "issue-tracker"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals",
    "Topic :: Software Development :: Bug Tracking",
]

[project.urls]
Homepage = "https://github.com/Gheat1/sctui"
Repository = "https://github.com/Gheat1/sctui"
Issues = "https://github.com/Gheat1/sctui/issues"

[project.scripts]
sctui = "sctui:main"

[tool.setuptools]
py-modules = ["sctui"]
