[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jtui"
version = "0.2.0"
description = "A fast, beautiful TUI for Jira — status-grouped tickets, instant startup, full keyboard + mouse control"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Gheat" }]
requires-python = ">=3.11"
dependencies = [
    "textual>=1.0",
    "httpx>=0.27",
]
keywords = ["jira", "tui", "terminal", "textual", "issue-tracker", "productivity"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Terminals",
    "Topic :: Software Development :: Bug Tracking",
]

[project.urls]
Homepage = "https://github.com/Gheat1/jtui"
Repository = "https://github.com/Gheat1/jtui"
Issues = "https://github.com/Gheat1/jtui/issues"

[project.scripts]
jtui = "jtui:main"

[tool.setuptools]
py-modules = ["jtui"]
